--- a/orb-link/src/App.css
+++ b/orb-link/src/App.css
@@ -32,7 +32,7 @@ body {
 .orb {
   width: 120px;
   height: 120px;
-  background-color: #1e90ff; /* Dodger blue for the orb */
+  background-color: #434547; /* Dodger blue for the orb */
   border-radius: 50%;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.4), 0 0 40px rgba(30, 144, 255, 0.6); /* Darker shadow + glowing effect */
   transition: all 0.4s ease-in-out;
